<resources>
    <string name="app_name">Green</string>
    <string name="internal">Check indoor condition</string>
    <string name="external">Check outdoors condition</string>
    <string name="library">Plant library</string>
    <string name="saved">Saved locations</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="Light">Light</string>
    <string name="Take_measurement">Retake measurement</string>
    <string name="DBpreference">com.example.Green.DBpreference</string>
    <string name="DBinit">DBinit</string>
    <string name="IntentPrecip">IntentPrecip</string>
    <string name="IntentTemp">IntentTemp</string>
    <string name="minimumTemp">Minimum temperature</string>
    <string name="rainTolerance">Rainfall tolerance</string>
    <string name="growthHabit">Growth habit</string>
    <string name="soilPH">Soil PH</string>
    <string name="minRootDepth">Minimum root depth</string>
    <string name="adaptedCoarseSoil">Adapted to coarse soil</string>
    <string name="adaptedMediumSoil">Adapted to medium soil</string>
    <string name="adaptedFineSoil">Adapted to fine soil</string>
    <string name="matchingPlants">Matching plants</string>
    <string name="noPlants">No plants for given conditions</string>
    <string name="lowHumidityDesc">Poor humidity for plants with thin leaves</string>
    <string name="medHumidityDesc">Good</string>
    <string name="hiHumidityDesc">High humidity that can accommodate more needy plants</string>
    <string name="lowLightDesc">Poor lighting that can affect plant growth</string>
    <string name="medLightDesc">Good</string>
    <string name="hiLightDesc">High lighting conditions close to that of the sun </string>
    <string name="lowTempDesc">Too cold for most house plants</string>
    <string name="medTempDesc">Good</string>
    <string name="hiTempDesc">Too high for most houseplants</string>
    <string name="title_activity_maps">Map</string>
    <string name="resetLoc">Reset Location</string>
    <string name="fetchData">Fetch data</string>
</resources>
